--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,8 @@ body {
     justify-content: flex-start; /* Alinea los elementos al inicio del contenedor flex */
 }
 .logo-container {
-    text-align: center; /* Centra el logo horizontalmente */
+    text-align: center; /* Centra el contenido horizontalmente */
+    margin: 0 auto; 
 }
 
 h1 {
@@ -41,4 +42,17 @@ h1 {
     justify-content: center;
     align-items: center;
     /* No es necesario establecer un ancho y alto específico si el SVG se escala correctamente con su viewBox */
+}
+.empezar{
+    position: absolute;
+    width: 75px;
+    top: 10px;
+    right: 10px;
+    border: none;
+    font-family: 'Merriweather', serif;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #587792;
+    padding: 5px;
 }
