--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
         margin: 20px auto; /* Centra el botón y agrega un margen superior */
         width: 80%; /* Ajusta el ancho del botón */
         left: 50%;
-        top: 155%;
+        top: 200%;
         transform: translateX(-50%); /* Centra el botón horizontalmente */
         padding: 15px 25px; /* Aumenta el relleno para hacerlo más alto */
         background-color: #4682B4; /* Color del fondo del botón */
@@ -245,5 +245,49 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
         left: 50%;
         transform: translateX(-50%) translateY(-50%); /* Centra horizontalmente */
         top:60%;
+    }
+}
+@media (min-width: 430px) and (max-width: 932px) {
+    body {
+        padding-top: 30px; /* Ajusta el espacio superior si es necesario */
+    }
+    
+    h1 {
+        font-size: 48px; /* Ajusta el tamaño del título */
+        margin: 0 auto; /* Centra el título */
+        top: 10%; /* Ajusta la posición vertical del título */
+        text-align: center;
+    }
+
+    #p1 {
+        font-size: 28px;
+        margin: 0 20px;
+        top: 35%;
+        text-align: center;
+        position: relative; /* Asegura que no esté en posición absoluta */
+    }
+
+    .logo-container {
+        width: 100px; /* Ajusta el tamaño del logo */
+        margin-top: 30px;
+    }
+
+    .circulo {
+        width: 100%; /* Ajusta el tamaño del círculo */
+        height: auto;
+        margin: 20px auto; /* Centra el círculo */
+    }
+
+    #botonEmpezar {
+        margin: 20px auto; /* Centra el botón */
+        width: 60%; /* Ajusta el ancho del botón */
+        padding: 15px 25px; /* Aumenta el padding del botón */
+        font-size: 18px; /* Aumenta el tamaño del texto en el botón */
+    }
+
+    #estadoJuego {
+        font-size: 24px; /* Ajusta el tamaño del texto de estado */
+        margin: 10px auto; /* Centra el texto */
+        text-align: center;
     }
 }
