--- a/style.css
+++ b/style.css
@@ -252,8 +252,7 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
     all: unset; /* Resetea todos los estilos aplicados */
    /* display: block; /* Asegura que los elementos sean bloques */
 /*}*/
-
-@media (min-width: 430px) and (max-width: 932px) {
+@media (min-width: 769px) and (max-width: 932px) {
     body {
         padding-top: 30px;
     }
@@ -261,7 +260,7 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
     h1 {
         font-size: 48px;
         margin: 0 auto;
-        padding-top: 25%; /* Ajusta el valor para el espacio superior */
+        padding-top: 25%;
         text-align: center;
     }
 
@@ -289,11 +288,13 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
         width: 60%;
         padding: 15px 25px;
         font-size: 18px;
+        margin-top: 80px;
     }
 
     #estadoJuego {
         font-size: 24px;
         margin: 10px auto;
         text-align: center;
+        margin-top: 40px;
     }
 }
