--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ h1 {
     text-align: justify;
 }
 
-
 .circulo {
     background: #312E2E;
     border-radius: 50%;
@@ -97,7 +96,6 @@ h1 {
     width: 100%;
     overflow: auto; /* Permite que el texto desborde si es necesario */
 }
-
 
 
 .pulse-effect:hover {
@@ -254,7 +252,87 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
     }
 }
 
+@media (min-width: 430px) and (max-width: 932px) {
+    body {
+        padding-top: 25px;
+    }
+    
+    
+    h1 {
+        position: absolute;
+        top: 8%; /* Ajusta este valor según necesites */
+        left: 50%;
+        transform: translateX(-50%); /* Centra horizontalmente */
+        font-size: 50px; /* Tamaño adecuado para pantallas grandes */
+    }
 
+    #p1 {
+        position: absolute;
+        top: 30%; /* Ajusta la posición vertical */
+        left: 50%;
+        transform: translateX(-50%); /* Centra horizontalmente */
+        font-size: 20px; /* Ajusta el tamaño del texto */
+        text-align: center;
+        width: 80%; /* Asegura que el texto no sea demasiado ancho */
+
+    }
+
+    .logo-container {
+        position: absolute;
+        top: 2%; /* Ajusta la posición vertical del logo */
+        left: 50%;
+        transform: translateX(-50%); /* Centra horizontalmente */
+        width: 150px; /* Tamaño del logo adecuado para pantallas grandes */
+        align-items: center;
+    }
+
+    .circulo {
+        position: absolute;
+        top: 108%; /* Ajusta la posición vertical */
+        left: 75%;
+        transform: translate(-50%, -50%); /* Centra el círculo */
+        width: 150%; /* Ajusta el tamaño del círculo */
+        height: auto; /* Mantén la proporción */
+        margin: 0 -25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden; /* Oculta cualquier contenido que desborde */
+        border-radius: 50%; 
+    }
+    
+    
+
+    #botonEmpezar {
+        position: absolute;
+        top: 155%; /* Ajusta la posición vertical del botón */
+        left: 50%;
+        transform: translateX(-50%); /* Centra horizontalmente */
+        width: 60%; /* Ajusta el ancho del botón */
+        padding: 20px; /* Aumenta el padding para pantallas grandes */
+        font-size: 20px; /* Ajusta el tamaño del texto del botón */
+    }
+
+    #estadoJuego {
+        position: absolute;
+        top: 48%; /* Ajusta la posición vertical del texto */
+        left: 50%;
+        transform: translateX(-50%); /* Centra horizontalmente */
+        font-size: 24px; /* Ajusta el tamaño del texto */
+        text-align: center;
+    }
+}
+
+/*pantallas pequeñas*/
+
+/*body .logo-container, body .circulo, body #botonEmpezar, body #estadoJuego {
+    all: unset; /* Resetea todos los estilos aplicados */
+   /* display: block; /* Asegura que los elementos sean bloques */
+/*}*/
+
+
+
+/////////////////////////////////////////////////////////////////////
 @media (min-width: 430px) and (max-width: 932px) {
     body {
         padding-top: 25px;
@@ -317,9 +395,7 @@ transform: scale(0.90); /* Reduce ligeramente el tamaño del botón cuando se ha
         text-align: center;
     }
 
-
 }
-
 /*pantallas pequeñas*/
 
 /*body .logo-container, body .circulo, body #botonEmpezar, body #estadoJuego {
